--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -15,8 +15,7 @@
       <li class="nav-item"><a href="<%= user_path(@user) %>" class="nav-link <%= 'active' if current_page?(user_path(@user)) %>">Wineposts  <span class="badge badge-secondary"><%= @count_wineposts %></span></a></li>
       <li class="nav-item"><a href="<%= followings_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followings_user_path(@user)) %>">Followings  <span class="badge badge-secondary"><%= @count_followings %></span></a></li>
       <li class="nav-item"><a href="<%= followers_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followers_user_path(@user)) %>">Followers  <span class="badge badge-secondary"><%= @count_followers %></span></a></li>
-      <li class="nav-item"><a href="#" class="nav-link">飲んでみたい！</a></li>
     </ul>
-    <%= render 'wineposts/wineposts', wineposts: @wineposts %>
+    <%= render 'users', users: @followers %>
   </div>
 </div>
