--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -5,7 +5,7 @@
 <h2 style="text-align:center; margin:50px;"><%= link_to 'ワインを投稿する', new_winepost_path %></h2>
 
 <div style="text-align:center;">
-	<h4>ワインの種類で並び替え</h4>
+	<h4>ワインの種類で絞り込み</h4>
   <%= link_to "赤ワイン", root_path(wine_type: '赤ワイン') %>
 	<%= link_to "白ワイン", root_path(wine_type: '白ワイン') %>
 </div>
