--- a/app/views/wineposts/new.html.erb
+++ b/app/views/wineposts/new.html.erb
@@ -1,6 +1,9 @@
 <h1>Winepost新規作成ページ</h1>
 
+
+
 <%= form_with(model: @winepost, local: true) do |f| %>
+			<%= render 'layouts/error_messages', model: f.object %>
 
       <div class="form-group">
 	      <%= f.label "画像をアップロード" %>
