--- a/app/views/wineposts/_wineposts.html.erb
+++ b/app/views/wineposts/_wineposts.html.erb
@@ -7,11 +7,16 @@
           <%= link_to winepost.user.name, user_path(winepost.user) %> <span class="text-muted">posted at <%= winepost.created_at %></span>
         </div>
         <div>
-        	<p><%= image_tag winepost.image.url if winepost.image? %></p>
-          <p><%= winepost.wine_type %></p>
-          <p><%= winepost.grape_varieties %></p>
-          <p><%= winepost.country %></p>
-          <p><%= winepost.review %></p>
+        	<p>
+        	  <% if winepost.image? %>
+        	   <%= image_tag winepost.image.url %>
+        	  <% else %> 
+        	   <%= image_tag "/assets/default.jpg", :size => '300x200' %>
+        	  <% end %> 
+        	</p>
+        	<p><span>name : </span><%= winepost.wine_name %></p>
+          <p><span>type : </span><%= winepost.wine_type %></p>
+          
           <%= link_to '投稿の詳細を見る', winepost_path(winepost.id) %>
         </div>
       </div>
