--- a/app/views/wineposts/edit.html.erb
+++ b/app/views/wineposts/edit.html.erb
@@ -8,11 +8,16 @@
       <div class="form-group">
 	      <%= f.label "画像をアップロード" %>
 	      <%= f.file_field :image %>
-	    </div>  
+	    </div>
+	    
+	     <div class="form-group">
+        <%= f.label :wine_name, 'ワインの名前をご記入ください' %>
+        <%= f.text_field :wine_name, class: 'form-control' %>
+      </div>
 
       <div class="form-group">
         <%= f.label :wine_type, 'ワインの種類は何ですか？' %>
-        <%= f.text_field :wine_type, class: 'form-control' %>
+        <%= f.select :wine_type, {赤ワイン:"赤ワイン", 白ワイン:"白ワイン", オレンジワイン:"オレンジワイン", ロゼワイン:"ロゼワイン",} %>
       </div>
 
       <div class="form-group">
