--- a/app/views/wineposts/new.html.erb
+++ b/app/views/wineposts/new.html.erb
@@ -6,25 +6,41 @@
 			<%= render 'layouts/error_messages', model: f.object %>
 
       <div class="form-group">
-	      <%= f.label "画像をアップロード" %>
+	      <%= f.label "画像をお選びください" %>
 	      <%= f.file_field :image %>
 	    </div>  
+	    
+	    <div class="form-group">
+        <%= f.label :wine_name, 'ワインの名前をご記入ください' %>
+        <%= f.text_field :wine_name, class: 'form-control' %>
+      </div>
 
       <div class="form-group">
         <%= f.label :wine_type, 'ワインの種類は何ですか？' %>
-        <%= f.select :wine_type, {赤ワイン:"赤ワイン", 白ワイン:"白ワイン",} %>
+        <%= f.select :wine_type, {赤ワイン:"赤ワイン", 白ワイン:"白ワイン", オレンジワイン:"オレンジワイン", ロゼワイン:"ロゼワイン",} %>
       </div>
 
       <div class="form-group">
         <%= f.label :country, '生産国はどこですか？' %>
         <%= f.select :country, {イタリア:"イタリア", フランス:"フランス", ドイツ:"ドイツ",
         スペイン:"スペイン", オーストリア:"オーストリア", ベルギー:"ベルギー", アメリカ:"アメリカ",
-        オーストラリア:"オーストラリア", ニュージーランド:"ニュージーランド", チリ:"チリ", 日本:"日本",} %>
+        オーストラリア:"オーストラリア", ニュージーランド:"ニュージーランド", チリ:"チリ", 日本:"日本", その他:"その他", } %>
       </div>
       
       <div class="form-group">
         <%= f.label :grape_varieties, 'ブドウ品種は何が使われていますか？' %>
-        <%= f.text_field :grape_varieties, class: 'form-control' %>
+        <%= f.select :grape_varieties, { カベルネ・ソーヴィニョン:"カベルネ・ソーヴィニョン", ピノ・ノワール:"ピノ・ノワール", 
+        シラー:"シラー", メルロー:"メルロー", サンジョヴェーゼ:"サンジョヴェーゼ", カルメネール:"カルメネール", ネッビオーロ:"ネッビオーロ",
+        シャルドネ:"シャルドネ", リースリング:"リースリング", ソーヴィニヨン・ブラン:"ソーヴィニヨン・ブラン", モスカート:"モスカート",
+        ピノ・グリ:"ピノ・グリ", ヴィオニエ:"ヴィオニエ", 甲州:"甲州", その他:"その他",} %>
+      </div>
+      
+      <div class="form-group">
+        <%= f.label :grape_year, 'ブドウの収穫は何年ですか？？' %>
+        <%= f.select :grape_year, {"1990":"1990", "1991":"1991", "1992":"1992", "1993":"1993","1994":"1994", "1995":"1995", "1996":"1996", "1997":"1997",
+        "1998":"1998", "1999":"1999", "2000":"2000", "2001":"2001", "2002":"2002", "2003":"2003", "2004":"2004", "2005":"2005",
+        "2006":"2006", "2007":"2007", "2008":"2008", "2009":"2009", "2010":"2010", "2011":"2011", "2012":"2012", "2013":"2013", "2014":"2014",
+        "2015":"2015","2016":"2016","2017":"2017","2018":"2018","2019":"2019",} %>
       </div>
 
       <div class="form-group">
