--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -1,12 +1,14 @@
-<div style="text-align:center; margin-bottom:20px;">
- <h3 class="card-title"><%= @user.name %></h3>
- <div class="card-body">
-  <img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 200 }) %>" alt="">
- </div>
+<div class="user-profile-name">
+ <h1 class="card-title"><%= @user.name %></h1>
+</div> 
+<div class="card-body">
+ <img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 200 }) %>" alt="">
 </div>
   
-<%= render 'relationships/follow_button', user: @user %>
-    
+<div class="follow-button"> 
+	<%= render 'relationships/follow_button', user: @user %>
+</div>
+
     <ul class="nav nav-tabs nav-justified mb-3">
       <li class="nav-item"><a href="<%= user_path(@user) %>" class="nav-link <%= 'active' if current_page?(user_path(@user)) %>">Wineposts  <span class="badge badge-secondary"><%= @count_wineposts %></span></a></li>
       <li class="nav-item"><a href="<%= followings_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followings_user_path(@user)) %>">Followings  <span class="badge badge-secondary"><%= @count_followings %></span></a></li>
