--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,13 @@
-<div style="text-align:center; margin-bottom:20px;">
- <h3 class="card-title"><%= @user.name %></h3>
- <div class="card-body">
-  <img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 200 }) %>" alt="">
- </div>
+<div class="user-profile-name">
+ <h1 class="card-title"><%= @user.name %></h1>
+</div> 
+<div class="card-body">
+ <img class="rounded img-fluid" src="<%= gravatar_url(@user, { size: 200 }) %>" alt="">
 </div>
-  
-<%= render 'relationships/follow_button', user: @user %>
+
+<div class="follow-button"> 
+	<%= render 'relationships/follow_button', user: @user %>
+</div>	 
 
 	<div>
 	  <ul class="nav nav-tabs nav-justified mb-3">
