--- a/app/views/wineposts/_wineposts.html.erb
+++ b/app/views/wineposts/_wineposts.html.erb
@@ -1,27 +1,34 @@
-<ul class="list-unstyled">
-  <% wineposts.each do |winepost| %>
-    <li class="media mb-3">
-      <img class="mr-2 rounded" src="<%= gravatar_url(winepost.user, { size: 50 }) %>" alt="">
-      <div class="media-body">
-        <div>
-          <%= link_to winepost.user.name, user_path(winepost.user) %> <span class="text-muted">posted at <%= winepost.created_at %></span>
+<div class="grid">
+	<% wineposts.each do |winepost| %>
+	  <div class="item">
+	    <div class="media mb-3">
+	      <img class="mr-2 rounded" src="<%= gravatar_url(winepost.user, { size: 50 }) %>" alt="">
+	      <div class="media-body">
+					<div class="wine-img">
+						<p>
+						  <% if winepost.image? %>
+						   <%= image_tag winepost.image.url,  :size => '210x210' %>
+						  <% else %> 
+						   <%= image_tag "/assets/default.jpg", :size => '210x210' %>
+						  <% end %> 
+						</p>
+					</div>
+          <div class="wine-name-type">
+        		<p><span>posted by : </span><%= link_to winepost.user.name, user_path(winepost.user) %></p>
+	        	<p><span>name : </span><%= winepost.wine_name %></p>
+	          <p><span>type : </span><%= winepost.wine_type %></p>
+	          <!--<p><span class="text-muted">posted at : <%= winepost.created_at.strftime("%Y-%m-%d %H:%M") %></span></p>-->
+          </div>
         </div>
-        <div>
-        	<p>
-        	  <% if winepost.image? %>
-        	   <%= image_tag winepost.image.url %>
-        	  <% else %> 
-        	   <%= image_tag "/assets/default.jpg", :size => '300x200' %>
-        	  <% end %> 
-        	</p>
-        	<p><span>name : </span><%= winepost.wine_name %></p>
-          <p><span>type : </span><%= winepost.wine_type %></p>
-          
-          <%= link_to '投稿の詳細を見る', winepost_path(winepost.id) %>
-        </div>
-      </div>
-    </li>
-  <% end %>
-</ul>
+	    </div>
+	    
+	    <div class="linktag">
+		    <%= link_to '投稿の詳細を見る', winepost_path(winepost.id) %>
+	    </div>
+	  </div>  
+	<% end %>
+</div> 
 
-<%= paginate wineposts %>
+<div class="pagenatediv">
+	<%= paginate wineposts %>
+</div>
