--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,8 +18,10 @@
 
 .button {
 	text-align: center;
-	margin:50px;
+	margin: auto;
 	font-size: 20px;
+	margin-bottom: 70px;
+	padding-bottom: 10px;
 }
 
 .jumbotron {
@@ -37,7 +39,7 @@
 .subtitle {
 	text-align: center;
 	margin-top: 100px;
-	/*font-size: 60px;*/
+  margin-bottom: 70px;
 	height: 65px;
 }
 
@@ -49,6 +51,7 @@ h2 .subtitle {
 .menu {
 	height: 100px;
 	margin-top: 20px;
+	margin-bottom: 30px;
 }
 
 .submenu1 {
@@ -59,7 +62,11 @@ h2 .subtitle {
 }
 
 .submenu2 {
-	/*margin-top: 20px;*/
+	margin-top: 20px;
+}
+
+.submenu2 a {
+	margin-left: 20px;
 }
 
 
@@ -85,7 +92,9 @@ h2 .subtitle {
 
 .pagenatediv {
 	/*text-align: center;*/
-	margin-top: 40px;
+	margin-top: 60px;
+	margin-bottom: 60px;
+	margin-left: 450px;
 }
 
 /*それぞれのitem*/
