--- a/app/views/wineposts/show.html.erb
+++ b/app/views/wineposts/show.html.erb
@@ -11,7 +11,7 @@
 				<% if @winepost.image? %>
 				 <%= image_tag @winepost.image.url, :size => '300x300' %>
 				<% else %>
-				 <%= image_tag "default.jpg", :size => '300x300' %>
+				 <%= image_tag "/default.jpg", :size => '300x300' %>
 				<% end %>
 			</div>
 			
