--- a/app/views/wineposts/_wineposts.html.erb
+++ b/app/views/wineposts/_wineposts.html.erb
@@ -9,7 +9,7 @@
 						  <% if winepost.image? %>
 						   <%= image_tag winepost.image.url,  :size => '210x210' %>
 						  <% else %> 
-						   <%= image_tag "/images/default.jpg", :size => '210x210' %>
+						   <%= image_tag "/default.jpg", :size => '210x210' %>
 						  <% end %> 
 						</p>
 					</div>
