--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -69,6 +69,16 @@ h2 .subtitle {
 	margin-left: 20px;
 }
 
+.big-bg {
+	background-size: cover;
+	background-position: center top;
+	background-repeat: no-repeat;
+}
+
+#home {
+	background-image: url("../images/toppage.jpg")
+}
+
 
 /*winepostページ*/
 
