--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -29,6 +29,7 @@
 
 <% else %>
 
+ <div id="home" class="big-bg">
 	<div class="center jumbotron">
 	  <div class="text-center" >
 	    <h1 class="page-title">Wineposts へようこそ！</h1>
@@ -38,6 +39,7 @@
 	    </div>
 	  </div>
 	</div>
+ </div>	
 	
 	<div class="subtitle">
 	 <h1><%= render 'layouts/massage'%></h1>
