--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -11,10 +11,10 @@
 		 	<h5>ワインの種類で絞り込み</h5>
 		</div>
 		<div class="submenu2">
-		  <%= link_to "赤ワイン", root_path(wine_type: '赤ワイン') %>
-			<%= link_to "白ワイン", root_path(wine_type: '白ワイン') %>
-			<%= link_to "オレンジワイン", root_path(wine_type: 'オレンジワイン') %>
-			<%= link_to "ロゼワイン", root_path(wine_type: 'ロゼワイン') %>
+		  <div class="winetype"><%= link_to "赤ワイン", root_path(wine_type: '赤ワイン') %></div>
+			<div class="winetype"><%= link_to "白ワイン", root_path(wine_type: '白ワイン') %></div>
+			<div class="winetype"><%= link_to "オレンジワイン", root_path(wine_type: 'オレンジワイン') %></div>
+			<div class="winetype"><%= link_to "ロゼワイン", root_path(wine_type: 'ロゼワイン') %></div>
 		</div>
 	</div>
 	
@@ -50,10 +50,10 @@
 		 	<h5>ワインの種類で絞り込み</h5>
 		</div> 	
 	  <div class="submenu2">
-		  <%= link_to "赤ワイン", root_path(wine_type: '赤ワイン') %>
-			<%= link_to "白ワイン", root_path(wine_type: '白ワイン') %>
-			<%= link_to "オレンジワイン", root_path(wine_type: 'オレンジワイン') %>
-			<%= link_to "ロゼワイン", root_path(wine_type: 'ロゼワイン') %>
+		  <div class="winetype"><%= link_to "赤ワイン", root_path(wine_type: '赤ワイン') %></div>
+			<div class="winetype"><%= link_to "白ワイン", root_path(wine_type: '白ワイン') %></div>
+			<div class="winetype"><%= link_to "オレンジワイン", root_path(wine_type: 'オレンジワイン') %></div>
+			<div class="winetype"><%= link_to "ロゼワイン", root_path(wine_type: 'ロゼワイン') %></div>
 		</div>
 	</div>
 	
