--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -62,7 +62,15 @@ h2 .subtitle {
 }
 
 .submenu2 {
+	text-align: center;
 	margin-top: 20px;
+	/*width: 500px;*/
+	display: flex;
+	justify-content: center;
+}
+
+.winetype {
+	text-align: center;
 }
 
 .submenu2 a {
@@ -214,4 +222,61 @@ h2 .subtitle {
  padding: 20px;
  font-size: 18px;
  padding-left: 60px;
+}
+
+
+
+/*スマートフォンサイズ用レイアウト*/
+
+@media (max-width: 670px ) {
+	.page-title {
+		text-align: center;
+		margin-bottom:60px;
+		margin-top: 60px;
+		color: black;
+		font-size: 32px;
+  }
+  
+  .link {
+  	margin-top: 110px;
+  	
+  }
+  
+  .btn {
+  	width: 240px;
+  	padding: 0 7px 0 7px;
+  }
+  
+  .jumbotron {
+  	margin: 0;
+  	padding-top: 25px;
+  	padding-bottom: 0;
+  	height: 420px;
+  }
+  
+  header {
+  	margin-bottom: 0;
+  }
+  
+  .subtitle {
+  	margin-top: 0;
+  	margin-bottom: 25px;
+  }
+  
+  .postmassage {
+  	font-size: 32px;
+  }
+  
+  .menu {
+  	margin-bottom: 0;
+  }
+  
+  .submenu2 {
+  	display: flex;
+  }
+  
+  .winetype {
+  	margin: 0;
+  	font-size: 15px;
+  }
 }
