--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,14 +1,14 @@
 <div class="text-center" style="margin-top:50px;">
-	<h1>Winepostsへようこそ！</h1>
-	<h2 style="margin-top:50px;">　飲んだワインを投稿して仲間と共有しましょう。</h2>
-	<h2 style="margin-top:20px;">楽しいワインライフの始まりです！</h2>
+	<h1 class="page-title">Winepostsへようこそ！</h1>
+	<h2 class="page-title2" style="margin-top:50px;">　飲んだワインを投稿して仲間と共有しましょう。</h2>
+	<h2 class="page-title2" style="margin-top:20px;">楽しいワインライフの始まりです！</h2>
 </div>
 
 <div class="text-center" style="margin-top:50px;">
-  <h1>Sign up</h1>
+  <h1 class="login">Sign up</h1>
 </div>
 
-<div class="row" style="margin-bottom:100px;">
+<div class="newform row" style="margin-bottom:100px;">
   <div class="col-sm-6 offset-sm-3">
 
     <%= form_with(model: @user, local: true) do |f| %>
