--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -244,6 +244,10 @@ h2 .subtitle {
 		font-size: 32px;
   }
   
+  .page-title1 {
+  	font-size: 23px;
+  }
+  
   .page-title2{
   	font-size: 15px;
   }
@@ -297,6 +301,7 @@ h2 .subtitle {
   
   .newform {
   	padding: 30px;
+  	height: 700px;
   }
   
   .newuser {
@@ -325,5 +330,13 @@ h2 .subtitle {
   	margin: auto;
   	margin-bottom: 30px;
   	text-align: center;
+  }
+  
+  .return-button {
+  	/*text-align: center;*/
+  	margin-top: 25px;
+  	margin-right: 0;
+  	width: 375px;
+  	padding-right: 88px;
   }
 }
