--- a/app/views/wineposts/new.html.erb
+++ b/app/views/wineposts/new.html.erb
@@ -1,9 +1,9 @@
 <div class="new-title">
- <h1>飲んだワインを投稿しましょう！</h1>
+ <h1 class="page-title1">飲んだワインを投稿しましょう！</h1>
 </div>	
 
 
-<div class="row" style="margin-bottom:100px;">
+<div class="newform row" style="margin-bottom:100px;">
   <div class="col-sm-6 offset-sm-3">
   	
 	<%= form_with(model: @winepost, local: true) do |f| %>
@@ -11,7 +11,7 @@
 
     <div class="form-group">
     	<div>
-      	<%= f.label "・画像をお選びください(画像が無くても構いません。)" %>
+      	<%= f.label "・画像をお選びください" %>
       </div>
       <div>
       	<%= f.file_field :image %>
