add css for heroku

--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -8,7 +8,7 @@
 	
 	<div class="menu" style="text-align:center;">
 		<div class="submenu1">
-		 	<h5>ワインの種類で絞り込み</h5>
+		 	<h5>Wine type</h5>
 		</div>
 		<div class="submenu2">
 		  <div class="winetype"><%= link_to "赤ワイン", root_path(wine_type: '赤ワイン') %></div>
@@ -47,7 +47,7 @@
 	
 	<div class="menu" style="text-align:center;">
 		<div class="submenu1">
-		 	<h5>ワインの種類で絞り込み</h5>
+		 	<h5>Wine type</h5>
 		</div> 	
 	  <div class="submenu2">
 		  <div class="winetype"><%= link_to "赤ワイン", root_path(wine_type: '赤ワイン') %></div>
