--- a/app/views/wineposts/new.html.erb
+++ b/app/views/wineposts/new.html.erb
@@ -62,7 +62,7 @@
     
 	<% end %>
 	
-		<div class="return-button">
+		<div class="return-button1">
 	 　　<%= link_to '一覧に戻る', root_path %>
 	　</div>
 　</div>
