--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -333,10 +333,31 @@ h2 .subtitle {
   }
   
   .return-button {
+  	text-align: center;
+  	padding-right: 35px;
+  }
+  
+  .return-button1 {
   	/*text-align: center;*/
   	margin-top: 25px;
   	margin-right: 0;
   	width: 375px;
   	padding-right: 88px;
+  }
+  
+  .return-button2 {
+  	/*padding-right: 20px;*/
+  	text-align: center;
+  	margin: 10px;
+  }
+  
+  .return-button3 {
+  	padding-right: 15px;
+  	text-align: center;
+  }
+  
+  .postmassage {
+  	font-size: 27px;
+  	margin-top: 60px;
   }
 }
