--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -33,6 +33,8 @@
 	<div class="center jumbotron">
 	  <div class="text-center" >
 	    <h1 class="page-title">Wineposts へようこそ！</h1>
+	    <h5 class="page-title-sub">飲んだワインを投稿し、共有するアプリケーションです。</h5>
+	    <h5 class="page-title-sub">お気に入りのワインを投稿しましょう。</h5>
 	    <div class="link">
 		    <div style="margin:15px;"><%= link_to '初めてご利用の方はコチラ', signup_path, class: 'btn btn-lg btn-primary' %></div>
 		    <div style="margin:15px;"><%= link_to '登録済の方はコチラ', login_path, class: 'btn btn-lg btn-primary' %></div>
