--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,12 +4,20 @@
 
 /*toppages css*/
 
+.text-center {
+	/*height: 900px;*/
+}
+
 .page-title {
 	text-align: center;
 	margin-bottom:60px;
 	margin-top: 60px;
 	color: black;
 	font-size: 65px;
+}
+
+.page-title-sub {
+	margin: 5px;
 }
 
 .link {
@@ -38,8 +46,8 @@
 
 .subtitle {
 	text-align: center;
-	margin-top: 100px;
-  margin-bottom: 70px;
+	margin-top: 220px;
+  margin-bottom: 50px;
 	height: 65px;
 }
 
@@ -244,6 +252,10 @@ h2 .subtitle {
 		font-size: 32px;
   }
   
+  .page-title-sub {
+  	font-size: 13px;
+  }
+  
   .page-title1 {
   	font-size: 23px;
   }
@@ -354,6 +366,12 @@ h2 .subtitle {
   .return-button3 {
   	padding-right: 15px;
   	text-align: center;
+  }
+  
+  .return-button4 {
+  	text-align: center;
+  	margin-top: 25px;
+  	padding-right: 18px;
   }
   
   .postmassage {
